# minimizer

./: .travis.yml  CMakeLists.txt  Result of experiment.md  Results of experiment.md  hansen_functions_result.md  initial results.xlsx  run_experiments.sh
include/: AGMND.h  command_line_parser.h  functions.h  hansen_functions.h  minimizer.h  minimizer_seq.h  minimizer_v1.h  minimizer_v2.h  minimizer_v3.h  minimizer_v4.h  multi_dimensional_minimizer.h  one_dimensional_agmnd.h  one_dimensional_agp.h  one_dimensional_agp_discontinuous.h  one_dimensional_minimizer.h  two_dimensional_minimizer.h
res/: inv_th_1.txt  inv_th_2.txt  inv_th_4.txt  inv_th_8.txt  none_th_1.txt  none_th_2.txt  none_th_4.txt  none_th_8.txt  sep_th_1.txt  sep_th_2.txt  sep_th_4.txt  sep_th_8.txt
samples/: CMakeLists.txt  main.cpp
samples/sample_src/: sample.cpp
samples/sample_src/GKLS/: GKLSConstrainedProblemFamily.hpp  GKLSProblemFamily.hpp
src/: AGMND.cpp  CMakeLists.txt  command_line_parser.cpp  functions.cpp  hansen_functions.cpp  minimizer.cpp  minimizer_seq.cpp  minimizer_v1.cpp  minimizer_v2.cpp  minimizer_v3.cpp  minimizer_v4.cpp  multi_dimensional_minimizer.cpp  one_dimensional_agmnd.cpp  one_dimensional_agp.cpp  one_dimensional_agp_discontinuous.cpp  one_dimensional_minimizer.cpp  two_dimensional_minimizer.cpp
test/: CMakeLists.txt  test_minimizer.cpp  test_minimizer_seq.cpp  test_minimizer_v1.cpp  test_two_dimensional_minimizer.cpp
test_AGMND/: CMakeLists.txt  test_AGMND.cpp
test_AGP_D/: CMakeLists.txt  test_apg_discontinuous.cpp
test_par/: CMakeLists.txt  test_main.cpp
test_seq/: CMakeLists.txt  test_minimizer_v2.cpp  test_minimizer_v4.cpp
